// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Component API/Dialog Header 1`] = `
<div
  dir="ltr"
>
  <button
    className="fd-button"
    onClick={[Function]}
    type="button"
  >
    <span
      className="fd-button__text"
    >
      Show Dialog
    </span>
  </button>
</div>
`;

exports[`Storyshots Component API/Dialog Primary 1`] = `
<div
  dir="ltr"
>
  <button
    className="fd-button"
    onClick={[Function]}
    type="button"
  >
    <span
      className="fd-button__text"
    >
      Show Dialog
    </span>
  </button>
</div>
`;

exports[`Storyshots Component API/Dialog Sizes 1`] = `
<div
  dir="ltr"
>
  <div
    className="fddocs-container"
  >
    <button
      className="fd-button"
      onClick={[Function]}
      type="button"
    >
      <span
        className="fd-button__text"
      >
        Show Small Dialog
      </span>
    </button>
    <button
      className="fd-button"
      onClick={[Function]}
      type="button"
    >
      <span
        className="fd-button__text"
      >
        Show Medium Dialog
      </span>
    </button>
    <button
      className="fd-button"
      onClick={[Function]}
      type="button"
    >
      <span
        className="fd-button__text"
      >
        Show Large Dialog
      </span>
    </button>
    <button
      className="fd-button"
      onClick={[Function]}
      type="button"
    >
      <span
        className="fd-button__text"
      >
        Show XL Dialog
      </span>
    </button>
  </div>
</div>
`;

exports[`Storyshots Component API/Dialog Subheader 1`] = `
<div
  dir="ltr"
>
  <button
    className="fd-button"
    onClick={[Function]}
    type="button"
  >
    <span
      className="fd-button__text"
    >
      Show Dialog
    </span>
  </button>
</div>
`;
